Fix file field width in IE11
Without this patch, long filename in file fields cause
horizontal scrollbar ine IE11 (bad flex implementaiton
in IE11…)

This is a part of story #10353 display a kanban as a widget

--- a/plugins/tracker/www/scripts/angular-artifact-modal/src/tuleap-artifact-modal-fields/file-field/_file-field.scss
+++ b/plugins/tracker/www/scripts/angular-artifact-modal/src/tuleap-artifact-modal-fields/file-field/_file-field.scss
@@ -48,6 +48,7 @@
     flex: 1 1 auto;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
 
     > a {
         text-decoration: none;
